# dev-workflow-platform

./: .gitignore  README.md  alembic.ini  docker-compose.yml
alembic/: env.py
alembic/versions/: 001_initial.py
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: llm_providers.py  pipelines.py  system_settings.py  tasks.py  webhooks.py
backend/app/models/: __init__.py  chat_message.py  llm_provider.py  pipeline.py  sync_cursor.py  sync_log.py  task.py
backend/app/prompts/: plan.py  review.py  test_case.py
backend/app/schemas/: __init__.py  llm_provider.py  pipeline.py  task.py
backend/app/services/: tapd_sync.py
backend/app/utils/: logging.py  retry.py
backend/app/workers/: dispatch.py  sync.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: MainLayout.tsx
frontend/src/pages/: PipelineWorkbench.tsx  Settings.tsx  TaskBoard.tsx
